@@ -15,7 +15,7 @@ public class ValueOfEnumValidator implements ConstraintValidator<ValueOfEnum, St
     public void initialize(ValueOfEnum annotation) {
         acceptedValues = Stream.of(annotation.enumClass().getEnumConstants())
                 .map(Enum::name)
-                .collect(Collectors.toList());
+                .toList();
         messageTemplate = annotation.message();
     }
 
